@startuml
skinparam classAttributeIconSize 0

package "App" {
  class Simulation
  class StatisticsCollector
  class PopulationSnapshot
}

package "Core" {
  class Milieu
  class Bestiole
  class BestioleFactory
  class SimulationConfig
}

package "Managers" {
  class CollisionManager
  class LifecycleManager
  class CollisionStats
  class LifecycleStats
}

package "Render" {
  interface Renderer
  class CImgRenderer
}

package "Behavior (Strategy)" {
  interface IBehavior
  class GregariousBehavior
  class FearfulBehavior
  class KamikazeBehavior
  class CautiousBehavior
}

package "Sensors (Composition)" {
  interface ISensor
  class EyeSensor
  class EarSensor
}

package "Accessories (Composition)" {
  interface IAccessory
  class FinAccessory
  class ShellAccessory
  class CamouflageAccessory
}

Simulation --> Milieu
Simulation --> Renderer
Simulation --> StatisticsCollector

StatisticsCollector --> PopulationSnapshot
StatisticsCollector --> Milieu : read state

Milieu --> Bestiole : contains *
Milieu --> CollisionManager
Milieu --> LifecycleManager
Milieu --> BestioleFactory

BestioleFactory --> SimulationConfig
BestioleFactory --> Bestiole : create()
BestioleFactory ..> IBehavior
BestioleFactory ..> ISensor
BestioleFactory ..> IAccessory

Bestiole *-- IBehavior
Bestiole *-- ISensor
Bestiole *-- IAccessory

IBehavior <|.. GregariousBehavior
IBehavior <|.. FearfulBehavior
IBehavior <|.. KamikazeBehavior
IBehavior <|.. CautiousBehavior

ISensor <|.. EyeSensor
ISensor <|.. EarSensor

IAccessory <|.. FinAccessory
IAccessory <|.. ShellAccessory
IAccessory <|.. CamouflageAccessory

Renderer <|.. CImgRenderer

CollisionManager --> CollisionStats
LifecycleManager --> LifecycleStats
Milieu --> CollisionStats : aggregates
Milieu --> LifecycleStats : aggregates

@enduml
